# HaWoR

./: .gitignore  ARCTIC_EGOCENTRIC_SUMMARY.md  ARCTIC_INTEGRATION_SUMMARY.md  ENHANCED_TRAINING_EVALUATION_README.md  MANO_SETUP.md  README.md  REAL_TRAINING_README.md  advanced_hawor.py  arctic_comparison_script.py  arctic_evaluation_framework.py  arctic_training_config.yaml  comprehensive_test_report.json  comprehensive_test_suite.py  create_hand_visualization.py  create_improved_visualization.py  demo_evaluation.py  demo_evaluation_report.md  demo_evaluation_results.json  demo_training.py  enhanced_training_evaluation.py  enhanced_training_pipeline.py  evaluate_and_visualize.py  hawor_interface.py  launch_training.py  memory_optimization.py  memory_optimization_report.json  metrics_validation_report.json  monitor_training.py  optimization_report.json  optimize_training_config.py  prepare_training_data.py  pyproject.toml  quick_demo.py  quick_inference.py  requirements_basic.txt  run_hawor_with_visualization.py  setup.sh  setup_arctic_integration.py  setup_hawor.py  setup_training_pipeline.py  (+15 more)
configs/: arctic_training_config.yaml  enhanced_training_config.yaml  mac_training_all_views.yaml  mac_training_pretrained.yaml  mac_training_stable.yaml  mac_training_test.yaml  macbook_training_config.json  memory_optimized_config.json  optimized_training_config.json  production_training_config.json  small_cpu_config.json  test_data_config.json
docs/: README.md
docs/arctic/: data-organization.md  evaluation-framework.md
docs/installation/: setup-guide.md
docs/training/: enhanced-training-guide.md
docs/troubleshooting/: image-issues.md
evaluation_framework/: arctic_evaluation_framework.py
hawor/utils/: process.py
infiller/hand_utils/: process.py
infiller/lib/model/: network.py
lib/models/: hawor.py
scripts/scripts_test_video/: hawor_video.py
src/: README.md  hawor_interface.py
src/datasets/: arctic_dataset_real.py
src/evaluation/: arctic_evaluation_framework.py  hawor_evaluation.py
src/models/: advanced_hawor.py  hawor_model.py  hawor_torch_fix.py
src/training/: arctic_data_preparation.py  arctic_training_evaluation.py  arctic_training_pipeline.py  enhanced_training_pipeline.py  hawor_losses.py  real_hawor_trainer.py  visualization.py
src/visualization/: hand_visualization.py
supervised_data/: DOWNLOAD_INSTRUCTIONS.md  dataset_info.json
supervised_data/ARCTIC/: ARCTIC_CREDENTIALS_SETUP.md  evaluate_arctic_with_hawor.py  train_hawor_on_arctic.py
